--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,23 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# idea
+.idea
+.idea/**
+*.iml
+#gradle/wrapper/**
+#gradlew
+#gradlew.bat
+out/
+.gradle/**
+target/
+.idea_modules/
+
+*.idea
+*.gradle
+
+# production
+build
+
