--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/setup-java@v2.1.0
         with:
         # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
-          java-version: 1.16
+          java-version: '16.0.1+9'
           distribution: 'adopt'
       - name: gradle package
         run: gradle clean build
