--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: cd otus-hw
+      #- name: Run a one-line script
+#        run: cd otus-hw
 
       # Runs a set of commands using the runners shell
  #     - name: Run a multi-line script
