--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,14 @@ jobs:
       - name: Run a one-line script
         run: ls
 
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: cd otus-hw
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: ls
+
       # Runs a set of commands using the runners shell
  #     - name: Run a multi-line script
   #      run: |
