--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,5 @@ jobs:
           distribution: 'adopt'
       - name: gradle package
         working-directory: ./otus-hw
-        run: gradle -b build.gradle clean build
+        run: gradle -b clean build
     
